testsuite/tests/parser/should_fail/T8501c.stderr

T8501c.hs:4:7: error:
    Variable not in scope: mdo :: (String -> IO ()) -> String -> IO ()
    Suggested fixes:
      • Perhaps use ‘mod’ (imported from Prelude)
      • Perhaps you intended to use RecursiveDo
